--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "monkeyc",
             "request": "launch",
@@ -16,6 +17,23 @@
             "request": "launch",
             "name": "Run Tests",
             "runTests": true,
+            "device": "${command:GetTargetDevice}"
+        },
+        {
+            "type": "monkeyc",
+            "request": "launch",
+            "name": "Run Complication Apps",
+            "stopAtLaunch": false,
+            "complicationSubscriberFolder": "${command:GetComplicationSubscriberFolder}",
+            "complicationPublisherFolder": "${command:GetComplicationPublisherFolder}",
+            "device": "${command:GetTargetDevice}"
+        },
+        {
+            "type": "monkeyc",
+            "request": "launch",
+            "name": "Run Native Pairing",
+            "runNativePairing": true,
+            "stopAtLaunch": false,
             "device": "${command:GetTargetDevice}"
         }
     ]
