--- a/bin/02wsgarmin-settings.json
+++ b/bin/02wsgarmin-settings.json
@@ -2,7 +2,7 @@
   "settings" : [ {
     "key" : "appVersion",
     "valueType" : "string",
-    "defaultValue" : "2.0.1",
+    "defaultValue" : "3.2.1",
     "configTitle" : "AppVersionTitle",
     "configPrompt" : null,
     "configType" : "alphaNumeric",
@@ -40,30 +40,54 @@
   "languages" : {
     "heb" : {
       "CorF" : "C or F",
-      "rain" : "סיכוי לגשם",
-      "AppVersionTitle" : "גרסה",
       "C" : "C",
-      "Hebrew" : "עברית",
+      "Hebrew" : "Hebrew",
       "F" : "F",
       "language" : "שפה",
       "AppName" : "ירושמיים",
-      "English" : "English",
+      "Valley1" : "עמק",
+      "Mountain1" : "הר",
+      "noon0" : "noon",
+      "Valley0" : "עמק",
+      "noon1" : "צהריים",
       "Mountain" : "הר",
+      "Mountain0" : "הר",
+      "morning1" : "בוקר",
+      "morning0" : "morning",
+      "rainchance1" : "סיכוי לגשם",
+      "rain" : "גשם",
+      "rainchance0" : "rain chance",
+      "AppVersionTitle" : "Version",
+      "English" : "English",
+      "night1" : "לילה",
       "Valley" : "עמק",
+      "night0" : "night",
       "language_label" : "Language:"
     },
     "valyrian" : {
       "CorF" : "C or F",
-      "rain" : "rain",
-      "AppVersionTitle" : "Version",
       "C" : "C",
       "Hebrew" : "Hebrew",
       "F" : "F",
       "language" : "Language",
       "AppName" : "02ws",
+      "Valley1" : "עמק",
+      "Mountain1" : "הר",
+      "noon0" : "noon",
+      "Valley0" : "Valley",
+      "noon1" : "צהריים",
+      "Mountain" : "mountain",
+      "Mountain0" : "Mountain",
+      "morning1" : "בוקר",
+      "morning0" : "morning",
+      "rainchance1" : "סיכוי לגשם",
+      "rain" : "rain",
+      "rainchance0" : "rain chance",
+      "AppVersionTitle" : "Version",
       "English" : "English",
-      "Mountain" : "Mountain",
-      "Valley" : "Valley",
+      "night1" : "לילה",
+      "Valley" : "valley",
+      "night0" : "night",
       "language_label" : "Language:"
     }
   }
